--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.1",
     "jest-expo": "26.0.0",
+    "react-native-scripts": "^1.14.1",
     "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,10 +19,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^26.0.0",
+    "expo": "^26.1.0",
     "moment": "^2.22.1",
     "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0",
+    "react-native": "^0.55.4",
     "react-native-elements": "^0.19.1",
     "react-navigation": "1.5.9"
   }
